<resources>
    <string name="app_name">todo</string>
    <string name="your_task">Your Task</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_task_hint">Enter Task</string>
    <string name="priority_hint">Priority</string>
    <string name="save_button_text">Save</string>
    <string name="plan_with_me">Plan With Me</string>
    <string name="quote_text">The only way to do great work is to love what you do</string>
    <string name="update_details">Update Details</string>
    <string name="update_button_text">Update</string>
    <string name="delete_button_text">Delete</string>
</resources>