<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UpdateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_details"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_hint"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/priority_hint"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_button_text"/>

        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#7722FF"
            android:text="@string/delete_button_text"/>
    </LinearLayout>

</LinearLayout>